<?xml version="1.0"?>
<package format="2">
  <name>ibeo_scala</name>
  <version>2.0.0</version>
  <description>The Ibeo ScaLa driver.</description>
  <license>LGPLv2.1</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <author email="preed@swri.org">P. J. Reed</author>

  <url type="bugtracker">https://bitbucket.org/autonomoustuff/ros_ibeo_scala/issues</url>
  <url type="repository">https://bitbucket.org/autonomoustuff/ros_ibeo_scala</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>ibeo_core</depend>
  <depend>pcl_ros</depend>
  <depend>network_interface</depend>
  <depend>ibeo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
