<?xml version="1.0"?>
<package>
  <name>ibeo_scala_msgs</name>
  <version>1.5.0</version>
  <description>The ibeo_scala_msgs package</description>
  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <license>Closed Source</license>
  <url type="repository">https://bitbucket.org/autonomoustuff/ros_ibeo_scala</url>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
</package>
